--- a/index.html
+++ b/index.html
@@ -8,16 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Focus Timer</h1>
-        <div class="timer-settings">
-            <div class="setting-group">
-                <label for="focus-minutes">Focus Time (minutes):</label>
-                <input type="number" id="focus-minutes" min="1" max="60" value="25">
-            </div>
-            <div class="setting-group">
-                <label for="break-minutes">Break Time (minutes):</label>
-                <input type="number" id="break-minutes" min="1" max="30" value="5">
-            </div>
+        <div class="header">
+            <h1>Focus Timer</h1>
+            <button id="settings-btn" class="icon-button">⚙️</button>
         </div>
         <div class="timer">
             <span id="minutes">25</span>:<span id="seconds">00</span>
@@ -32,6 +25,35 @@
             <button id="skip-break" class="hidden">Skip Break</button>
         </div>
     </div>
+
+    <!-- Settings Modal -->
+    <div id="settings-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Settings</h2>
+                <button id="close-settings" class="close-button">×</button>
+            </div>
+            <div class="modal-body">
+                <div class="setting-group">
+                    <label for="focus-minutes">Focus Time (minutes):</label>
+                    <input type="number" id="focus-minutes" min="1" max="60" value="25">
+                </div>
+                <div class="setting-group">
+                    <label for="break-minutes">Break Time (minutes):</label>
+                    <input type="number" id="break-minutes" min="1" max="30" value="5">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="save-settings">Save Settings</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Audio element for timer chime -->
+    <audio id="timer-chime" preload="auto">
+        <source src="https://assets.mixkit.co/active_storage/sfx/270/270-preview.mp3" type="audio/mpeg">
+    </audio>
+
     <script src="script.js"></script>
 </body>
 </html> 
